welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:59: error: Unmatched closing brace '}' ignored here
}
^